--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         <div class="card1">
             
             <div class="card-description">
-                <img class="gym-icon" src="images/package/icon1.png" alt="">
+                <img class="gym-icon" src="images/package/icon1.png" alt="workout img">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam molestias earum fugiat minima tempore nulla recusandae veritatis quis repellat, quisquam voluptatem exercitationem rerum, vitae quae quos inventore nostrum magnam!</p>
                 <a href="http://">More....</a>
             </div>
         </div><div class="card1">
             
             <div class="card-description">
-                <img class="gym-icon" src="images/package/icon1.png" alt="">
+                <img class="gym-icon" src="images/package/icon1.png" alt="workout img">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quibusdam molestias earum fugiat minima tempore nulla recusandae veritatis quis repellat, quisquam voluptatem exercitationem rerum, vitae quae quos inventore nostrum magnam!</p>
                 <a href="http://">More....</a>
             </div>
@@ -70,8 +70,8 @@
         <div class="about-container">
             <div class="about-left">
                 <div class="workout-img">
-                    <img src="/images/about1.jpg" alt="">
-                    <img src="/images/about2.jpg" alt="">
+                    <img src="/images/about1.jpg" alt="workout img">
+                    <img src="/images/about2.jpg" alt="workout img">
                 </div>
             </div>
             <div class="about-right">
@@ -109,7 +109,7 @@
         <div class="service-container">
             <div class="service1">
                 <div class="service-img">
-                    <img src="/images/services/service1.jpg" alt="">
+                    <img src="/images/services/service1.jpg" alt="workout img">
                 </div>
                 <div class="services-text">
                 <h5 class="service-name">Fitness Trainning</h5>
