--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="about-container">
             <div class="about-left">
                 <div class="workout-img">
-                    <img src="/images/about1.jpg" alt="workout img">
-                    <img src="/images/about2.jpg" alt="workout img">
+                    <img src="images/about1.jpg" alt="workout img">
+                    <img src="images/about2.jpg" alt="workout img">
                 </div>
             </div>
             <div class="about-right">
@@ -109,7 +109,7 @@
         <div class="service-container">
             <div class="service1">
                 <div class="service-img">
-                    <img src="/images/services/service1.jpg" alt="workout img">
+                    <img src="images/services/service1.jpg" alt="workout img">
                 </div>
                 <div class="services-text">
                 <h5 class="service-name">Fitness Trainning</h5>
@@ -123,10 +123,10 @@
             </div>
             <div class="service1">
                 <div class="batch">
-                    <img class="batch-img" src="/images/batch.png" alt="">
+                    <img class="batch-img" src="images/batch.png" alt="">
                 </div>
                 <div class="service-img">
-                    <img src="/images/services/services2.jpg" alt="">
+                    <img src="images/services/services2.jpg" alt="">
                 </div>
                 <div class="services-text">
                 <h5 class="service-name">Fitness Trainning</h5>
@@ -140,7 +140,7 @@
             </div>
             <div class="service1">
                 <div class="service-img">
-                    <img src="/images/services/service1.jpg" alt="">
+                    <img src="images/services/service1.jpg" alt="">
                 </div>
                 <div class="services-text">
                 <h5 class="service-name">Fitness Trainning</h5>
